Minor cleanup fixes.
v2 is stable and can replace v1.

--- a/src/app.scss
+++ b/src/app.scss
@@ -39,8 +39,7 @@ td {
   margin: auto;
 }
 
-.formInput, .formLabel {
-  float: left;
+.formInput, .formLabel, #_new_DaysOfTheWeek {
   margin-top: 5px;
   margin-bottom: 5x;
 }
