Add link to Github repo in footer.

--- a/src/app.scss
+++ b/src/app.scss
@@ -41,9 +41,13 @@ td {
 
 .formInput, .formLabel, #_new_DaysOfTheWeek {
   margin-top: 5px;
-  margin-bottom: 5x;
 }
 
 .is_displayed_col {
+  text-align: center;
+}
+
+footer {
+  margin-top: 40px;
   text-align: center;
 }
