--- a/src/app.scss
+++ b/src/app.scss
@@ -2,19 +2,8 @@
 @import '~@fullcalendar/daygrid/main.css';
 @import '~@fullcalendar/timegrid/main.css';
 
-body {
-  margin: 20px 10px;
-  padding: 0;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  font-size: 14px;
-}
-
-#title {
-  font-family: "helvetica", sans-serif;
-  text-align: center;
-}
-
 #calendar {
+  background-color: #fafafa;
   max-width: 900px;
   margin: 0 auto;
 }
@@ -23,16 +12,16 @@ body {
   text-align: center;
 }
 
-#course_table_container {
-  display: inline-block;
-}
+// #course_table_container {
+//   display: inline-block;
+// }
 
-#course_table,
-th,
-td {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
+// #course_table,
+// th,
+// td {
+//   border: 1px solid black;
+//   border-collapse: collapse;
+// }
 
 #new_course_form {
   width: fit-content;
